Adding authentication to GMS - poc final